Added Custom Dialogs using Material design and Add Item functionality

--- a/app/src/main/res/layout/activity_add_item_dialog.xml
+++ b/app/src/main/res/layout/activity_add_item_dialog.xml
@@ -7,16 +7,68 @@
     android:orientation="vertical"
     tools:context=".view.AddItemDialog">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/et_name"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/username"/>
+        android:layout_height="@android:dimen/app_icon_size"
+        android:background="@color/colorLightRed"
+        android:theme="@style/Animation.Design.BottomSheetDialog">
 
-    <Button
-        android:id="@+id/btn_Add"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/add_item"
+            android:textColor="@android:color/white"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add"/>
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="vertical"
+        android:layout_gravity="center">
+
+        <!--Username-->
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/TextInputLayoutStyle"
+            app:boxStrokeColor="@android:color/black">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_name"
+                style="@style/TextInputEditTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/username"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- UserType -->
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/TextInputLayoutStyle"
+            app:boxStrokeColor="@android:color/black">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_userType"
+                style="@style/TextInputEditTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/role" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/btn_add"
+            style="@style/DialogButtonStyle"
+            android:text="@string/add" />
+
+    </LinearLayout>
 
 </LinearLayout>
