--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -18,7 +18,8 @@
         android:layout_margin="16dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_add_white"/>
+        android:src="@drawable/ic_add_white"
+        app:backgroundTint="@color/colorLightRed"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
